# ROS2_Course_Udemy

battery_status_indication/: CMakeLists.txt  package.xml
battery_status_indication/src/: battery_node.cpp  led_node.cpp
cpp_node/: CMakeLists.txt  package.xml
cpp_node/src/: add_two_ints_client.cpp  add_two_ints_client_no_oop.cpp  add_two_ints_server.cpp  cpp_subscriber.cpp  hardware_status_publisher.cpp  number_publisher.cpp  number_subscriber.cpp  robot_news_station.cpp
my_py_pkg/: package.xml  setup.py
my_py_pkg/my_py_pkg/: add_two_ints_client.py  add_two_ints_client_no_oop.py  add_two_ints_server.py  hardware_status_publisher.py  py_log.py  reset_counter_client_no_oop.py  robot_news_station.py  template_python_node.py
my_robot_bringup/: CMakeLists.txt  package.xml
my_robot_bringup/config/: robot_news_station_params.yaml
my_robot_bringup/launch/: robot_news_station.launch.xml
my_robot_interfaces/: CMakeLists.txt  package.xml
my_robot_interfaces/msg/: LedPanelState.msg  TurtlesAlive.msg
my_robot_interfaces/srv/: CatchTurtle.srv  SetLed.srv
turtle_sample_task/: CMakeLists.txt  package.xml
